MOC-29: [FE] UI for schema and its tables.

--- a/mocker-front/src/app/app.component.html
+++ b/mocker-front/src/app/app.component.html
@@ -1,2 +1,2 @@
 <router-outlet></router-outlet>
-<moc-loading *ngIf='appConfigService.loading.value'></moc-loading>
+<moc-loading *ngIf='applicationConfig.loading.value'></moc-loading>
