--- a/mocker-front/src/app/shared/component/table/table.component.html
+++ b/mocker-front/src/app/shared/component/table/table.component.html
@@ -1,18 +1,21 @@
-<div class='{{ class }} tw-text-sm tw-z-10' id='main'>
-  <div class='{{ selfClass }} tw-border tw-rounded tw-w-72 tw-overflow-hidden'>
-    <p class='tw-bg-blue tw-h-8 tw-heading tw-text-center tw-leading-8 tw-font-medium tw-text-white tw-uppercase'>
+<div class='{{ class }} tw-text-sm tw-z-10 tw-shadow' id='main'>
+  <div class='{{ selfClass }} tw-border tw-rounded tw-w-72'>
+    <p class='tw-bg-blue tw-h-8 tw-text-center tw-leading-8 tw-font-medium tw-text-white tw-uppercase'>
       <i class='fa-regular fa-table tw-mr-3'></i>
       {{ table.name }}
-      <i (click)='openDetail()' class='edit-icon tw-hidden tw-ml-3 fa-solid fa-pen-to-square tw-cursor-pointer'></i>
+      <i (click)='openDetail()' class='tw-ml-3 fa-solid fa-pen-to-square tw-cursor-pointer'></i>
+      <ng-content></ng-content>
     </p>
     <div class='tw-bg-white'>
-      <div *ngFor='let field of table.fields'
-           class='tw-px-5 tw-py-1.5 tw-flex tw-justify-between hover:tw-bg-blue-light tw-items-center'>
+      <div (click)='relationMapping.emit(field)'
+           *ngFor='let field of table.fields'
+           [id]='field.id'
+           class='field tw-px-5 tw-py-1.5 tw-flex tw-justify-between tw-cursor-pointer hover:tw-font-medium {{ current && current.id === field.id ? "tw-bg-blue-light" : undefined }} hover:tw-bg-blue-light tw-items-center'>
         <p class='tw-w-1/12'>
-          <!--          <i class='fa-regular fa-key'></i>-->
+          <i *ngIf='foreignKeys.includes(field.id)' class='fa-regular fa-key'></i>
           <!--          <i class='fa-solid fa-key text-yellow'></i>-->
         </p>
-        <p (click)='map.emit(field)' class='tw-w-1/2 tw-cursor-pointer hover:tw-font-medium'>{{ field.name }}</p>
+        <p class='tw-w-1/2'>{{ field.name }}</p>
         <p class='tw-w-1/3 tw-uppercase'>{{ field.sqlType.code || 'DEFAULT' }}</p>
       </div>
     </div>
