--- a/mocker-front/src/app/component/general/component/general/general.component.html
+++ b/mocker-front/src/app/component/general/component/general/general.component.html
@@ -1,6 +1,6 @@
 <div class='tw-w-300 tw-mx-auto tw-text-sm' id='main'>
   <moc-description [description]='"component.general.introduction" | translate' class='tw-mt-5'></moc-description>
-  <moc-table-detail [table]='formGroup.controls.table' class='tw-mt-16'></moc-table-detail>
+  <moc-table-detail [fields]='formGroup.controls.table.controls.fields' class='tw-mt-16'></moc-table-detail>
   <hr class='tw-mt-5'/>
   <div [formGroup]='formGroup' class='tw-flex tw-mt-5'>
     <span class='tw-mt-3 tw-mr-5'>{{ 'component.general.row' | translate }}</span>
