--- a/mocker-front/src/app/shared/component/input/input.component.html
+++ b/mocker-front/src/app/shared/component/input/input.component.html
@@ -26,7 +26,7 @@
       <i class='fa-regular fa-eye{{ isShowPassword ? "-slash" : "" }} tw-text-gray'></i>
     </div>
   </div>
-  <div *ngIf='isValidated && control.invalid'>
+  <div *ngIf='isValidated && control.invalid && control.errors'>
     <moc-error-message-processor [error]='control.errors'></moc-error-message-processor>
   </div>
 </div>
