MOC-48: Fix Selected generate type is wrong.

--- a/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
+++ b/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
@@ -1,7 +1,8 @@
 <div [modal]='this' id='main' popup>
   <div [formGroup]='formGroup' class='tw-text-sm tw-w-112 ptw--5'>
     <p class='tw-text-center tw-font-bold tw-text-gray'>{{ 'modal.change_password.title' | translate }}</p>
-    <img alt='change_password' class='tw-w-32 tw-mt-4 tw-mx-auto' src='assets/png/auth/change_password.png'/>
+    <img alt='change_password' class='tw-w-32 tw-mt-4 tw-mx-auto' ngSrc='assets/png/auth/change_password.png'
+         height='256' width='256'/>
     <p *ngIf='!isShowOldPassword' class='tw-mt-4 tw-text-gray'>{{ 'modal.change_password.instruction' | translate }}</p>
     <moc-input *ngIf='isShowOldPassword'
                [control]='formGroup.controls.oldPassword'
