--- a/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -2,7 +2,7 @@
   <header class='tw-bg-white tw-flex tw-text-sm tw-justify-between tw-items-center tw-px-5' id='main'>
     <nav class='tw-flex tw-h-14'>
       <a class='logo tw-flex tw-items-center tw-mr-10 tw-relative' routerLink='/'>
-        <img alt='logo' class='tw-w-28' src='assets/png/logo.png'/>
+        <img alt='logo' class='tw-w-28' ngSrc='assets/png/logo.png' height='409' width='2082'/>
       </a>
       <a *ngFor='let navigation of navigations'
          [routerLink]='navigation.routerLink'
