--- a/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
+++ b/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
@@ -1,6 +1,6 @@
 <div class='tw-w-screen tw-h-screen center-box tw-bg-center tw-bg-contain tw-bg-no-repeat' id='main'>
   <div class='tw-w-100 tw-bg-white tw-rounded tw-drop-shadow-2xl tw-text-sm tw-text-center tw-p-10'>
-    <img alt='logo' class='tw-w-44 tw-mx-auto' src='assets/png/logo.png'/>
+    <img alt='logo' class='tw-w-44 tw-mx-auto' ngSrc='assets/png/logo.png' height='409' width='2082'/>
     <p class='tw-font-bold tw-mt-5 text-primary-solid'>{{ 'component.forget_password.title' | translate }}</p>
     <p class='tw-text-left tw-mt-4'>{{ 'component.forget_password.instruction' | translate }}</p>
     <moc-input [control]='username'
