--- a/mocker-front/src/app/shared/component/table/table.component.html
+++ b/mocker-front/src/app/shared/component/table/table.component.html
@@ -17,7 +17,7 @@
           <!--          <i class='fa-solid fa-key text-yellow'></i>-->
         </p>
         <p class='tw-w-1/2'>{{ field.name }}</p>
-        <p class='tw-w-1/3 tw-uppercase'>{{ field.sqlType.code || 'DEFAULT' }}</p>
+        <p class='tw-w-1/3 tw-uppercase'>{{ field?.sqlType ? field.sqlType.code : 'DEFAULT' }}</p>
       </div>
     </div>
   </div>
