--- a/mocker-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
+++ b/mocker-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
@@ -1,25 +1,24 @@
 <div [dialog]='true' [modal]='this' class='!tw-z-50' id='main' popup>
-  <div class='tw-w-150 tw-flex tw-justify-between tw-pt-10 tw-px-5 tw-pb-5 tw-overflow-hidden'>
-    <div class='tw-absolute tw-top-0 tw-left-0 tw-bg-{{ color }} tw-w-full tw-h-1.5'></div>
-    <div class='tw-w-1/6'>
-      <i [class]='icon'></i>
-    </div>
-    <div class='tw-w-3/4'>
+  <div class='tw-w-150 tw-pt-10 tw-px-5 tw-pb-5 tw-overflow-hidden'>
+    <div class='tw-absolute tw-top-0 tw-left-0 tw-bg-{{ color }} tw-w-2 tw-h-full'></div>
+    <div class='tw-pl-2'>
       <p class='tw-font-bold'>{{ options.title! | translate }}</p>
       <p *ngIf='options.body' class='tw-text-sm tw-mt-2'>{{ options.body | translate }}</p>
       <p *ngIf='!options.body' [innerHTML]='options.detail' class='tw-text-sm tw-mt-2 tw-overflow-auto'></p>
-      <div class='tw-flex tw-flex-row-reverse tw-mt-5'>
-        <div class='tw-flex tw-text-sm tw-justify-end'>
-          <moc-button (click)='close(false)' *ngIf='isShowBtnCancel'
-                      label='modal.dialog.cancel'
-                      selfClass='btn-light'>
-          </moc-button>
-          <moc-button (click)='close(true)' *ngIf='isShowBtnOK'
-                      class='tw-ml-1'
-                      label='modal.dialog.ok'
-                      selfClass='tw-w-12 btn-primary tw-bg-{{ color }}'>
-          </moc-button>
-        </div>
+    </div>
+    <div class='tw-flex tw-flex-row-reverse tw-mt-5'>
+      <div class='tw-flex tw-text-sm tw-justify-end'>
+        <moc-button (click)='close(false)'
+                    *ngIf='isShowBtnCancel'
+                    label='modal.dialog.cancel'
+                    selfClass='btn-light'>
+        </moc-button>
+        <moc-button (click)='close(true)'
+                    *ngIf='isShowBtnOK'
+                    class='tw-ml-1'
+                    label='modal.dialog.ok'
+                    selfClass='tw-w-12 btn-primary tw-bg-{{ color }}'>
+        </moc-button>
       </div>
     </div>
   </div>
