MOC-54: Fix UI for button component is consistent.

--- a/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
+++ b/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
@@ -10,7 +10,8 @@
                type='email'></moc-input>
     <p *ngIf='isNotExistedUsername'
        class='tw-mt-2 tw-text-red'>{{ 'component.forget_password.username_not_exist' | translate }}</p>
-    <moc-button (click)='submit()' label='component.forget_password.send_verification_code'></moc-button>
+    <moc-button (click)='submit()' class='tw-mt-3' selfClass='btn-primary'
+                label='component.forget_password.send_verification_code'></moc-button>
     <hr class='tw-mt-8'/>
     <p class='tw-mt-4 tw-text-blue'>
       <a class='hover:tw-underline'
